--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,1 @@
-{
-    "name": "WebDev PWA",
-    "short_name": "WebDev PWA",
-    "icons": [],
-    "start_url": "./index.html",
-    "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#000000"
-}
+{"name":"WebDev PWA","short_name":"WebDev PWA","theme_color":"#000000","icons":[],"start_url":"./index.html","display":"standalone","background_color":"#000000"}
