--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"WebDev PWA","short_name":"WebDev PWA","theme_color":"#000000","icons":[],"start_url":"./index.html","display":"standalone","background_color":"#000000"}
+{"name":"WebDev PWA","short_name":"WebDev PWA","theme_color":"#000000","icons":[{"src":"./logo.png","sizes":"144x144","type":"image/png"}],"start_url":"/vuetify-pwa","display":"standalone","background_color":"#000000"}
