--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
         "sizes": "144x144",
         "type": "image/png"
     }],
-    "start_url": "/vuetify-pwa",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000000"
