--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuetify-dialog": "^2.0.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
