--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
